RESOLVED FIXED30460
NPN_ReloadPlugins does not reload the page even if reloadPages is true.
https://bugs.webkit.org/show_bug.cgi?id=30460
Summary NPN_ReloadPlugins does not reload the page even if reloadPages is true.
Yael
Reported 2009-10-16 14:33:05 PDT
The call to Page::refreshPlugins(reloadOpenPages) is missing from refreshPlugins() implementation in PluginInfoStore.cpp . Will upload a patch after I test on all platforms.
Attachments
Patch (7.56 KB, patch)
2009-11-20 10:56 PST, Yael
kenneth: review+
commit-queue: commit-queue-
Patch (8.62 KB, patch)
2009-11-20 12:27 PST, Yael
kenneth: review+
commit-queue: commit-queue-
Yael
Comment 1 2009-11-20 10:56:30 PST
WebKit Commit Bot
Comment 2 2009-11-20 11:40:08 PST
Comment on attachment 43596 [details] Patch Rejecting patch 43596 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11651 test cases. plugins/reloadplugins-and-pages.html -> failed Exiting early after 1 failures. 9585 tests run. 337.89s total testing time 9584 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 7 test cases (<1%) had stderr output
Yael
Comment 3 2009-11-20 12:27:06 PST
Created attachment 43603 [details] Patch I forgot that not all ports share the same plugins code. Added the new tests to the skip list for ports that don't use WebCore/plugins.
WebKit Commit Bot
Comment 4 2009-11-20 12:45:41 PST
Comment on attachment 43603 [details] Patch Rejecting patch 43603 from commit-queue. Failed to run "['/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', '--reviewer', 'Kenneth Rohde Christiansen', '--force']" exit_code: 1 Last 500 characters of output: .rej patching file LayoutTests/plugins/reloadplugins-no-pages-expected.txt patching file LayoutTests/plugins/reloadplugins-and-pages-expected.txt patching file LayoutTests/plugins/reloadplugins-no-pages.html patching file LayoutTests/plugins/reloadplugins-and-pages.html patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 1. patching file WebKitTools/DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp patching file WebKitTools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3.
Yael
Comment 5 2009-11-20 13:41:58 PST
Simon Hausmann
Comment 6 2009-11-21 03:22:11 PST
Hmm, the Mac port uses a different code path indeed, but the Safari Windows build uses WebCore/plugins/npapi.cpp, which calls the refreshPlugins() function you changed. So theoretically the test should pass there. The bot output only indicated failure on Mac.
Note You need to log in before you can comment on or make changes to this bug.