NPN_ReloadPlugins does not reload the page even if reloadPages is true. https://bugs.webkit.org/show_bug.cgi?id=30460

Reviewed by Kenneth Rohde Christiansen.

WebCore:

Replace call to PluginDatabase::installedPlugins()->refresh() with Page::refreshPlugins().
It already refreshes plugins and reloads pages when necessary.

Tests: plugins/reloadplugins-and-pages.html
       plugins/reloadplugins-no-pages.html

* plugins/PluginInfoStore.cpp:
(WebCore::refreshPlugins):

WebKitTools:

Added code for calling NPN_ReloadPlugins with reloadPages true and false.

* DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp:
(pluginInvoke):

LayoutTests:

Added tests for calling NPN_ReloadPlugins with reloadPages being true and false.



Canonical link: https://commits.webkit.org/42686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51257 268f45cc-cd09-0410-ab3c-d52691b4dbfc