WebCore/plugins/PluginInfoStore.cpp
@@ -27,6 +27,7 @@
 #include "PluginInfoStore.h"
 
 #include "KURL.h"
+#include "Page.h"
 #include "PluginData.h"
 #include "PluginDatabase.h"
 #include "PluginPackage.h"
@@ -93,11 +94,7 @@ bool PluginInfoStore::supportsMIMEType(const WebCore::String& mimeType)
 
 void refreshPlugins(bool reloadOpenPages)
 {
-    PluginDatabase::installedPlugins()->refresh();
-
-    if (reloadOpenPages) {
-        // FIXME: reload open pages
-    }
+    Page::refreshPlugins(reloadOpenPages);
 }
 
 }
