WebKitTools/DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp
@@ -170,6 +170,8 @@ enum {
     ID_TEST_THROW_EXCEPTION_METHOD,
     ID_TEST_FAIL_METHOD,
     ID_DESTROY_NULL_STREAM,
+    ID_TEST_RELOAD_PLUGINS_NO_PAGES,
+    ID_TEST_RELOAD_PLUGINS_AND_PAGES,
     NUM_METHOD_IDENTIFIERS
 };
 
@@ -195,7 +197,9 @@ static const NPUTF8 *pluginMethodIdentifierNames[NUM_METHOD_IDENTIFIERS] = {
     "testConstruct",
     "testThrowException",
     "testFail",
-    "destroyNullStream"
+    "destroyNullStream",
+    "reloadPluginsNoPages",
+    "reloadPluginsAndPages"
 };
 
 static NPUTF8* createCStringFromNPVariant(const NPVariant* variant)
@@ -779,6 +783,13 @@ static bool pluginInvoke(NPObject* header, NPIdentifier name, const NPVariant* a
         browser->invoke(plugin->npp, windowScriptObject, name, args, argCount, result);
     } else if (name == pluginMethodIdentifiers[ID_DESTROY_NULL_STREAM]) 
         return destroyNullStream(plugin, args, argCount, result);
+    else if (name == pluginMethodIdentifiers[ID_TEST_RELOAD_PLUGINS_NO_PAGES]) {
+        browser->reloadplugins(false);
+        return true;
+    } else if (name == pluginMethodIdentifiers[ID_TEST_RELOAD_PLUGINS_AND_PAGES]) {
+        browser->reloadplugins(true);
+        return true;
+    }
     
     return false;
 }
